--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3,6 +3,13 @@ load("@io_bazel_rules_kotlin//kotlin:core.bzl", "define_kt_toolchain")
 define_kt_toolchain(
     name = "kotlin_toolchain",
     api_version = "1.8",
-    jvm_target = "11",
-    language_version = "1.8"
+    jvm_target = "17",
+    language_version = "1.8",
+)
+
+load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
+
+alias(
+    name = "ir",
+    actual = "@//src/main/kotlin/com/jetbrains/bsp/generators:ir",
 )
