--- a/src/main/kotlin/com/jetbrains/bsp/generators/BUILD
+++ b/src/main/kotlin/com/jetbrains/bsp/generators/BUILD
@@ -3,9 +3,11 @@ load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
 kt_jvm_library(
     name = "ir",
     srcs = glob(["ir/**/*.kt"]),
+    resources = ["@//spec"],
+    visibility = ["//visibility:public"],
     deps = [
+        "@//spec-traits",
+        "@maven//:software_amazon_smithy_smithy_codegen_core",
         "@maven//:software_amazon_smithy_smithy_model",
-        "@maven//:software_amazon_smithy_smithy_codegen_core"
-    ]
-
+    ],
 )
