--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -10,6 +10,6 @@ define_kt_toolchain(
 load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
 
 alias(
-    name = "ir",
-    actual = "@//src/main/kotlin/com/jetbrains/bsp/generators:ir",
+    name = "codegen",
+    actual = "@//src/main/kotlin/com/jetbrains/bsp/generators:codegen",
 )
