Revised code generator DSL for better readability and management
The revisions in the 'dsl.kt' file include restructuring the generator's Domain Specific Language (DSL) to enhance the coding style and readability. Several new methods were added, including `block` and `paren` for creating different types of code blocks. These changes facilitate better code management and make generator scripts more reflective of the code being generated.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -12,4 +12,5 @@ load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
 alias(
     name = "codegen",
     actual = "@//src/main/kotlin/com/jetbrains/bsp/generators:codegen",
+    visibility = ["//visibility:public"],
 )
