--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -7,7 +7,7 @@ define_kt_toolchain(
     language_version = "1.8",
 )
 
-load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
+load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")
 
 alias(
     name = "codegen",
