--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_kotlin//kotlin:core.bzl", "define_kt_toolchain")
 define_kt_toolchain(
     name = "kotlin_toolchain",
     api_version = "1.8",
-    jvm_target = "17",
+    jvm_target = "11",
     language_version = "1.8",
 )
 
@@ -15,11 +15,19 @@ alias(
     visibility = ["//visibility:public"],
 )
 
-kt_jvm_binary(
+java_binary(
     name = "bsp4kt-generator",
     main_class = "com.jetbrains.bsp.generators.bsp4kt.Main",
     visibility = ["//visibility:public"],
     runtime_deps = [
         ":codegen",
     ],
+)
+
+load("//rules/generator:generator.bzl", "library_generator")
+
+library_generator(
+    name = "generate-bsp4kt",
+    gen_tool = ":bsp4kt-generator",
+    visibility = ["//visibility:public"],
 )
