--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3,7 +3,7 @@ load("@io_bazel_rules_kotlin//kotlin:core.bzl", "define_kt_toolchain")
 define_kt_toolchain(
     name = "kotlin_toolchain",
     api_version = "1.8",
-    jvm_target = "17",
+    jvm_target = "11",
     language_version = "1.8",
 )
 
@@ -11,6 +11,6 @@ load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library"
 
 alias(
     name = "codegen",
-    actual = "@//src/main/kotlin/com/jetbrains/bsp/generators:codegen",
+    actual = "//codegen/src/main/kotlin/com/jetbrains/bsp/generators:codegen",
     visibility = ["//visibility:public"],
 )
