--- a/bsp4kt/BUILD
+++ b/bsp4kt/BUILD
@@ -1,6 +1,6 @@
-load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
+load("@rules_jvm_external//:kt_defs.bzl", "kt_jvm_export")
 
-kt_jvm_library(
+kt_jvm_export(
     name = "bsp4kt",
     srcs = glob(["src/**/*.kt"]),
     plugins = ["@com_github_jetbrains_kotlin//:kotlinx-serialization-compiler-plugin"],
@@ -8,4 +8,5 @@ kt_jvm_library(
         "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
         "@maven//:com_github_agluszak_jsonrpc4kt",
     ],
+      maven_coordinates = "com.jetbrains.bsp:bsp4kt:0.1.0",
 )
