--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,6 +1,8 @@
 jdk:
   - openjdk9
 before_install:
-  - brew install bazelisk
+  - wget https://github.com/bazelbuild/bazelisk/releases/download/v1.17.0/bazelisk-linux-amd64
+  - chmod +x bazelisk-linux-amd64
+  - mv bazelisk-linux-amd64 bazel
 install:
-  - bazelisk run --define "maven_repo=file://$HOME/.m2/repository" //bsp4kt:bsp4kt.publish
+  - ./bazel run --define "maven_repo=file://$HOME/.m2/repository" //bsp4kt:bsp4kt.publish
