--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,7 @@
 jdk:
   - openjdk9
+before_install:
+  - sdk install gradle
 install:
   - cp -r bsp4kt/* .
+  - gradle clean build publishToMavenLocal
