--- a/bsp4rs/Cargo.toml
+++ b/bsp4rs/Cargo.toml
@@ -12,6 +12,7 @@ lsp-types = "0.94.0"
 serde = "1.0.147"
 serde_json = "1.0.89"
 serde_repr = "0.1.9"
+serde-enum-str = "0.3.2"
 
 [dev-dependencies]
 insta = { version = "1.29.0", features = ["yaml", "json"] }
