--- a/bsp4kt/BUILD
+++ b/bsp4kt/BUILD
@@ -3,10 +3,10 @@ load("@rules_jvm_external//:kt_defs.bzl", "kt_jvm_export")
 kt_jvm_export(
     name = "bsp4kt",
     srcs = glob(["src/**/*.kt"]),
+    maven_coordinates = "org.jetbrains.bsp:bsp4kt:0.1.0",
     deps = [
-        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
-        "@maven//:com_github_agluszak_jsonrpc4kt",
         "//:kotlin_serialization",
+        "@maven//:com_github_agluszak_jsonrpc4kt",
+        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
     ],
-    maven_coordinates = "com.jetbrains.bsp:bsp4kt:0.1.0",
 )
