Should kinda work now

--- a/old-scala-codegen/src/bsp/codegen/BUILD
+++ b/old-scala-codegen/src/bsp/codegen/BUILD
@@ -1,7 +1,7 @@
 load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
 
 scala_library(
-    name = "old-scala-codegen",
+    name = "blahblah",
     srcs = glob(["**/*.scala"]),
     resources = ["@//spec"],
     visibility = ["//visibility:public"],
@@ -9,5 +9,11 @@ scala_library(
         "@//spec-traits",
         "@maven//:software_amazon_smithy_smithy_codegen_core",
         "@maven//:software_amazon_smithy_smithy_model",
+        "@maven//:software_amazon_smithy_smithy_utils",
+        "@maven//:com_lihaoyi_os_lib_2_13",
+        "@maven//:com_lihaoyi_geny_2_13",
+        "@maven//:com_monovore_decline_2_13",
+        "@maven//:org_typelevel_cats_core_2_13",
+        "@maven//:org_typelevel_cats_kernel_2_13"
     ],
 )
