--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -16,17 +16,8 @@ jobs:
           path: "~/.cache/bazel"
           key: bazel
 
-      - name: Generate bsp4kt
-        run: bazel run :generate-bsp4kt
-
-      - name: Generate bsp4rs
-        run: bazel run :generate-bsp4rs
-
-      - name: Generate bsp4s
-        run: bazel run :generate-bsp4s
-
-      - name: Generate bsp4j
-        run: bazel run :generate-bsp4j
+      - name: Generate
+        run: bazel run :generate
 
       - name: Build
         run: bazel build //...
@@ -45,5 +36,5 @@ jobs:
         if: steps.verify-changed-files.outputs.files_changed == 'true'
         run: |
           echo "Detected changed files: ${{ steps.verify-changed-files.outputs.changed_files }}"
-          echo "Make sure to run 'bazel run :generate-bsp4{j,kt,rs,s}' before pushing."
+          echo "Make sure to run 'bazel run :generate' before pushing."
           exit 1
