--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -8,8 +8,17 @@ jobs:
   check-generation:
     name: Check generation
     runs-on: ubuntu-latest
+    env:
+      COURSIER_CACHE: ~/coursier/cache
     steps:
       - uses: actions/checkout@v3
+      - name: Mount bazel cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/bazel
+            ~/coursier/cache
+          key: bazel
 
       - name: Generate
         run: bazel run :generate
