--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -8,16 +8,15 @@ jobs:
   check-generation:
     name: Check generation
     runs-on: ubuntu-latest
-    env:
-      COURSIER_CACHE: ~/coursier/cache
     steps:
       - uses: actions/checkout@v3
+      - uses: coursier/cache-action@v6
+      - uses: coursier/setup-action@v1
       - name: Mount bazel cache
         uses: actions/cache@v3
         with:
           path: |
             ~/.cache/bazel
-            ~/coursier/cache
           key: bazel
 
       - name: Generate
