--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -12,6 +12,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: coursier/cache-action@v6
       - uses: coursier/setup-action@v1
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
       - name: Mount bazel cache
         uses: actions/cache@v3
         with:
