Add tests and testkit

--- a/bsp4kt/BUILD
+++ b/bsp4kt/BUILD
@@ -9,4 +9,5 @@ kt_jvm_export(
         "@maven//:com_github_agluszak_jsonrpc4kt",
         "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
     ],
+    visibility = ["//visibility:public"],
 )
