--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -42,6 +42,8 @@ jobs:
             **/*.scala
             **/*.java
             **/*.md
+            !bazel-*
+            !website/node_modules
 
       - name: Fail if we detect changed files
         if: steps.verify-changed-files.outputs.files_changed == 'true'
