move Serializers.kt definition to codegen/src/mainresources

--- a/bsp4kt/BUILD
+++ b/bsp4kt/BUILD
@@ -2,7 +2,7 @@ load("@rules_jvm_external//:kt_defs.bzl", "kt_jvm_export")
 
 kt_jvm_export(
     name = "bsp4kt",
-    srcs = glob(["src/**/*.kt"]) + glob(["resources/**/*.kt"]),
+    srcs = glob(["src/**/*.kt"]),
     maven_coordinates = "org.jetbrains.bsp:bsp4kt:0.1.0",
     deps = [
         "//:kotlin_serialization",
