Remodel IR and add support for untaggedUnion (#21)
* make transforming to IR more language-specific

* add untaggedUnion ir shapes

* render untaggedUnion in bsp4rs

* Fix bsp4kt

* Make `dataKind` only if needed

* Fix bsp4kt v2

* Fix aliasing in smithyToIr

* Make generating bsp4rs quiet

* add generating untaggedUnion in bsp4j and bsp4s

* Fix bsp4rs tests

* fix `?` sign generation

* render untaggedUnion in bsp4kt

* move bsp4s utils to bsp4s/resources

* remove "T" prefix from type variants

* add documentation for IrConfig

* format

* make better documentation

* refactor Serializers

* format imports like in main branch

* move Serializers.kt definition to codegen/src/mainresources

* move CustomCodec.scala definition to old-scala-codegen/resources

* throw an exception for not supported untaggedUnion

* format imports like in main branch v2

* format scala code

--- a/old-scala-codegen/BUILD
+++ b/old-scala-codegen/BUILD
@@ -2,8 +2,8 @@ load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
 
 scala_library(
     name = "old-scala-codegen",
-    srcs = glob(["**/*.scala"]),
-    resources = glob(["resources/**/*"]), # "@//spec" is not here because a copy is already in the new codegen
+    srcs = glob(["src/main/scala/**/*.scala"]),
+    resources = glob(["src/main/resources/**/*"]),  # "@//spec" is not here because a copy is already in the new codegen
     visibility = ["//visibility:public"],
     deps = [
         "@//spec-traits",
