--- a/bsp4rs/Cargo.toml
+++ b/bsp4rs/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2021"
 path = "src/org/jetbrains/bsp/bsp4rs/lib.rs"
 
 [dependencies]
-lsp-types = "0.94.1"
-serde = "1.0.188"
+serde = { version = "1.0.34", features = ["derive"] }
 serde_json = "1.0.106"
 serde_repr = "0.1.16"
 serde-enum-str = "0.4.0"
