add basic kotlin lib test adapter

--- a/bsp4kt/BUILD
+++ b/bsp4kt/BUILD
@@ -4,6 +4,7 @@ kt_jvm_export(
     name = "bsp4kt",
     srcs = glob(["src/**/*.kt"]),
     maven_coordinates = "org.jetbrains.bsp:bsp4kt:0.1.0",
+    visibility = ["//visibility:public"],
     deps = [
         "//:kotlin_serialization",
         "@maven//:com_github_agluszak_jsonrpc4kt",
