fix file breaking the verify process

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -44,6 +44,7 @@ jobs:
             **/*.md
             !bazel-*
             !website/node_modules
+            !bsp4rs/target
 
       - name: Fail if we detect changed files
         if: steps.verify-changed-files.outputs.files_changed == 'true'
