add JsonRenderer2 which render JsonElement instead of Strings

--- a/codegen/BUILD
+++ b/codegen/BUILD
@@ -7,6 +7,8 @@ kt_jvm_library(
     visibility = ["//visibility:public"],
     deps = [
         "@//spec-traits",
+        "@//:kotlin_serialization",
+        "@maven//:com_github_agluszak_jsonrpc4kt",
         "@maven//:com_google_code_gson_gson",
         "@maven//:software_amazon_smithy_smithy_codegen_core",
         "@maven//:software_amazon_smithy_smithy_model",
