--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -24,6 +24,7 @@ multirun(
         "//:generate-bsp4kt_command",
         "//:generate-bsp4rs_command",
         "//:generate-bsp4s_command",
+        "//:generate-bsp4ts_command",
         "//:generate-website_command",
     ],
     jobs = 0,
@@ -147,5 +148,21 @@ library_generator(
     name = "generate-bsp4s",
     gen_tool = ":bsp4s-generator",
     library_name = "bsp4s",
+    visibility = ["//visibility:public"],
+)
+
+java_binary(
+    name = "bsp4ts-generator",
+    main_class = "org.jetbrains.bsp.generators.bsp4ts.Main",
+    visibility = ["//visibility:public"],
+    runtime_deps = [
+        "//codegen",
+    ],
+)
+
+library_generator(
+    name = "generate-bsp4ts",
+    gen_tool = ":bsp4ts-generator",
+    library_name = "bsp4ts",
     visibility = ["//visibility:public"],
 )
